--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -618,12 +618,6 @@ body > section > .holder > .title h2:after {
   left: 0;
   right: 0;
 }
-/*margin: 0;
-padding: 0;
-border: 0;
-font: inherit;
-font-size: 100%;*/
-
 
 .rw-words{
   display: inline-block;
@@ -1554,7 +1548,13 @@ fieldset.app-charnameinfo legend {
 /* ----------------------------
 >> avatar containers
 ---------------------------- */
-#app-picturebox { position: relative;}
+.gallery_container {
+  width: 100%
+}
+#app-picturebox {
+  position: relative;
+}
+
 .app-picture {
   display: inline-block;
   width: 422px;
@@ -1575,7 +1575,7 @@ fieldset.app-charnameinfo legend {
   width: 400px;
   height: 300px;
   font-family: 'Abril Fatface';
-  font-size: 100px;
+  font-size: 50px;
   color: #000;
   padding-top: 80px;
   background: #f91791;
@@ -1597,13 +1597,31 @@ fieldset.app-charnameinfo legend {
 /* ----------------------------
 >> actual information fields
 ---------------------------- */
-.overlay {
-  background-color:#777777;
-  height:100%;
-  opacity:0.7;
-  position:absolute;
-  width:100%;
-  z-index:5;
+
+.app-picturedet {
+  background: #2a2a2a;
+  border: 1px solid #1f1f1f;
+  -moz-column-count: 3;
+  -moz-column-gap: 20px;
+  -moz-column-width: 100px;
+  -webkit-column-count: 3;
+  -webkit-column-gap: 20px;
+  -webkit-column-width: 100px;
+  color: #cacaca;
+  column-count: 3;
+  column-gap: 20px;
+  column-width: 100px;
+  display: none;
+  font-size: 14px;
+  height: 322px;
+  padding: 40px;
+  overflow: hidden;
+  position: absolute;
+  top: 10px;
+  left: 265px;
+  text-align: justify;
+  width: 715px;
+  z-index: 3;
 }
 #app-picturedet1 {
   background: #2a2a2a;
@@ -1622,10 +1640,10 @@ fieldset.app-charnameinfo legend {
   font-size: 14px;
   height: 322px;
   padding: 40px;
-  overflow: auto;
+  overflow: hidden;
   position: absolute;
   top: 10px;
-  left: 265px;
+  left: 350px;
   text-align: justify;
   width: 715px;
   z-index: 3;
@@ -1650,10 +1668,10 @@ fieldset.app-charnameinfo legend {
   overflow: hidden;
   position: absolute;
   top: 10px;
-  left: 20px;
+  left: 350px;
   text-align: justify;
   width: 715px;
-  z-index: 2;
+  z-index: 3;
 }
 #app-picturedet3{
   background: #2a2a2a;
@@ -1672,10 +1690,10 @@ fieldset.app-charnameinfo legend {
   font-size: 14px;
   height: 322px;
   padding: 40px;
-  overflow: auto;
+  overflow: hidden;
   position: absolute;
   top: 10px;
-  left: 265px;
+  left: 350px;
   text-align: justify;
   width: 715px;
   z-index: 3;
@@ -1701,7 +1719,7 @@ fieldset.app-charnameinfo legend {
   overflow: hidden;
   position: absolute;
   top: 10px;
-  left: 20px;
+  left: 350px;
   text-align: justify;
   width: 715px;
   z-index: 2;
